* Made small changes to the ToutBox.fr plugin.
* Updated SendSpace.com (plugin re-written from scratch).
* Fixed SendSpace.com (upload logic).
* Added a new callable utility class to remove cryptography restrictions.
* Updated SendSpace.com (cryptography restrictions removed).
* Removed advertisements from the application.
* Updated NeembuuUploader.java (cleaned up).

==== v 3.4.0 ====
* Updated Uploaded.net (now generates descriptive links instead of the short ul.to links).
* FEATURE: added a new "upload folder" feature wherein users can now select a particular folder and, 
NU will detect and select all files within it, and therefore, 
enable the users to seamlessly upload all files within a given folder (including all files within sub-directories).
* GUI: Replaced the previously used "plain" buttons for selecting files (and folders) with two, new, visually appealing images.
* GUI: Adjusted the size and placement of the "LOG" button and fixed some display issues.
* Fixed a bug with the newly added "upload folder" feature (no longer affects the select files option negatively).
* Updated RockFile.eu (increased max. filesize limit per file from 1GB to 2GB).
* Added JheBerg.net (with and without account).
* Updated RapidU.net (changed upload status detecting logic).
* Added FilesTent.com (with and without account).
* Added MinhaTeca.com.br (account only).
* Added FilesBomb.in (with and without account).
* Added IguanaShare.com (account only).
* Added BeStream.tv (account only).
* Added FilePack.pl (account only).
* Implemented an advertisement to help support the project.
* Changed the update notification URLs.
* Updated version number and preparing for v3.4 release.
* Updated changes.txt
* Implemented a hotfix for SSL validation errors (fixed SSLHandshakeException errors).

==== v 3.3.0 ====
* Fixed NitroFlare.com (plugin was outdated)
* Fixed MediaFire.com (outdated plugin ... re-written from scratch)